welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: 'case' expected but '}' found.
	}
        ^